--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +12,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.0",
-    "http": "^0.0.1-security",
-    "socket.io": "^4.8.0",
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
